# audiophile

backend/: main.py  pyproject.toml
backend/api/routes/: __init__.py  admin.py
backend/app/: crud.py  db.py  dependencies.py  main.py  utils.py
backend/app/api/: main.py
backend/app/api/routes/: admin.py  product.py
backend/app/db/: database.py
backend/app/models/: admin.py  product.py  token.py
backend/models/: __init__.py  admin.py
frontend/actions/: checkout.ts  login.ts  new-product.ts
frontend/app/: globals.css  layout.tsx  not-found.tsx
frontend/app/(goback)/checkout/: page.tsx
frontend/app/(user)/: layout.tsx
frontend/app/(user)/(goback)/checkout/: page.tsx
frontend/app/(user)/(goback)/product/[id]/: page.tsx
frontend/app/admin/: layout.tsx
frontend/app/admin/dashboard/: page.tsx
frontend/app/admin/login/: page.tsx
frontend/components/admin/: auth-guard.tsx  logout.tsx  product-dialog.tsx  product-view.tsx
frontend/components/checkout/: confirmation-modal.tsx  form.tsx  summary.tsx
frontend/components/layout/: header.tsx
frontend/components/ui/: alert-dialog.tsx  button.tsx  field.tsx  input.tsx  radio-group.tsx  separator.tsx  textarea.tsx
frontend/providers/: auth-provider.tsx  cart-provider.tsx
frontend/schema/: index.ts
frontend/types/: index.ts
