[project]
name = "Audiophile"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.30",
    "fastapi[standard]>=0.128.0",
    "hypercorn>=0.18.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "sqlmodel>=0.0.31",
]
